# petervarnai.art

./: .env  .gitignore  3dScene.js  Cargo.toml  README.md  \  env-skel  flake.nix  index.html  package-lock.json  peter_website.db  sajat_weblap.db  sajat_weblap2.db
.opencode/: config.json
3dFiles/: kebabGLB.glb
src/: db.rs  error.rs  helpers.rs  main.rs  models.rs
src/error/: api_err.rs  app_err.rs  mod.rs
src/handlers/: admin_handlers.rs  exhibition_handlers.rs  mod.rs  project_handlers.rs  public_handlers.rs
src/helpers/: mod.rs  project_helpers.rs  server_helpers.rs
src/middleware/: mod.rs  require_admin.rs
src/models/: domain.rs  mod.rs  requests.rs  responses.rs  state.rs  templating.rs
src/services/: exhibition.rs  files.rs  mod.rs  project.rs  queries.rs  site.rs
src/tests/: auth_routes.rs  exhibition_routes.rs  helpers.rs  mod.rs  project_routes.rs  public_routes.rs
templates/: about.html  admin.html  index.html  login.html  package-lock.json  package.json  project.html  vite.config.js
templates/3dFiles/: kebabGLB.glb
templates/admin/: admin.css  admin.html  admin.min.js  admin_edit_project.html
templates/css/: admin.css  login.css  mobile.css  style.css
templates/js/: 3dScene.js  admin.js  admin_edit-project_submit-forms.js  admin_exhibition_submit-forms.js  index-BNxXh4at.js  index.js  loading-anim-raf.js  menu_functions.js  submit_forms.js  videoEmbeds.js
tests/: project_tests.rs
