[package]
name = "sajat_weblap_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-multipart = "0.7.2"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = {version = "4.9.0", features = ["openssl"]}
futures-util = "0.3.31"
lazy_static = "1.5.0"
nanoid = "0.4.0"
rusqlite = "0.36.0"
serde = "1.0.219"
serde_json = "1.0.140"
tera = "1.20.0"
time = { version = "0.3.41", features = ["serde"] }

